--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,11 @@ body {
 }
 #pyramid-list {
 	margin-bottom: 30px;
+	padding-left: 20vw;
+}
+
+.name-container {
+	margin: 40px 0px 20px 0px;
 }
 
 .form-group label {
