--- a/public/views/index.html
+++ b/public/views/index.html
@@ -25,7 +25,7 @@
 	</head>
 	<body ng-app="PyramidApp">
 		<div class="container">
-			<nav class="navbar navbar-inverse">
+			<nav class="navbar">
 				<div class="navbar-header">
 					<a href="/" class="navbar-brand">Pyramids</a>
 				</div>
