Split controller duties

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -17,8 +17,8 @@
 		<script src="libs/angular-route/angular-route.min.js" charset="utf-8"></script>
 
 		<!-- ANGULAR -->
-		<script src="js/controllers/MainCtrl.js"></script>
-	    <script src="js/controllers/PyramidCtrl.js"></script>
+		<script src="js/controllers/EditCtrl.js"></script>
+	    <script src="js/controllers/PyrCtrl.js"></script>
 	    <script src="js/services/PyramidService.js"></script>
 	    <script src="js/appRoutes.js"></script>
 	    <script src="js/app.js"></script>
@@ -27,7 +27,7 @@
 		<div class="container">
 			<nav class="navbar">
 				<div class="navbar-header">
-					<a href="/" class="navbar-brand">Pyramids</a>
+					<a href="/create" class="navbar-brand">Create</a>
 				</div>
 
 				<ul class="nav navbar-nav">
