--- a/public/views/index.html
+++ b/public/views/index.html
@@ -15,6 +15,8 @@
 		<!-- SPELLS -->
 		<script src="libs/angular/angular.min.js" charset="utf-8"></script>
 		<script src="libs/angular-route/angular-route.min.js" charset="utf-8"></script>
+		<script src="libs/jquery/dist/jquery.min.js" charset="utf-8"></script>
+		<script src="libs/bootstrap/dist/js/bootstrap.min.js" charset="utf-8"></script>
 
 		<!-- ANGULAR -->
 		<script src="js/controllers/EditCtrl.js"></script>
