--- a/public/views/pyramids.html
+++ b/public/views/pyramids.html
@@ -3,119 +3,23 @@
 	<!-- header -->
 	<div class="jumbotron text-center"><h1><span class="label label-info">{{ pyramids.length }}</span> Pyramids</h1></div>
 	<!-- list of existing pyramids -->
-	<div id="pyramid-list" class="row">
-
-		<div>
-			<div ng-repeat="pyramid in pyramids">
-				<div class="name-container">
-					<button class="btn" data-toggle="collapse" data-target="#pyr-form-{{ pyramid._id }}" ng-click="resetForm(pyramid);">
-						<h3>{{ pyramid.name }}</h3>
-					</button>
-				</div>
-
-				<form id="pyr-form-{{ pyramid._id }}" class="collapse">
-					<div class="form-group">
-						<!-- author input -->
-						<label for="author-input-{{ pyramid._id }}">Author:</label>
-						<input type="text" id="author-input-{{ pyramid._id }}"
-						class="form-control input-lg"
-						placeholder="Author"
-						ng-model="formData.author"
-						value="pyramid.author">
-
-						<!-- name input -->
-						<label for="name-input-{{ pyramid._id }}">Name:</label>
-						<input type="text" id="name-input-{{ pyramid._id }}"
-						class="form-control input-lg"
-						placeholder="Name"
-						ng-model="formData.name"
-						value="pyramid.name">
-
-						<!-- chapter input -->
-						<label for="chapter-input-{{ pyramid._id }}">Term's chapter or unit:</label>
-						<select id="chapter-input-{{ pyramid._id }}"
-						class="form-control input-lg"
-						ng-model="formData.chapter">
-							<option ng-repeat="chapter in chapters">{{ chapter }}</option>
-						</select>
-
-						<!-- context input -->
-						<label for="context-input-{{ pyramid._id }}">Context:</label>
-						<input type="text" id="context-input-{{ pyramid._id }}"
-						class="form-control input-lg"
-						placeholder="Context"
-						ng-model="formData.context"
-						value="pyramid.context">
-
-						<!-- contrast input -->
-						<label for="contrast-input-{{ pyramid._id }}">Contrast:</label>
-						<input type="text" id="contrast-input-{{ pyramid._id }}"
-						class="form-control input-lg"
-						placeholder="Contrast"
-						ng-model="formData.contrast"
-						value="pyramid.contrast">
-
-						<!-- example input -->
-						<label for="example-input-{{ pyramid._id }}">Example:</label>
-						<textarea rows="4" id="example-input-{{ pyramid._id }}"
-						class="form-control input-lg"
-						placeholder="Example"
-						ng-model="formData.example"
-						value="pyramid.example"></textarea>
-
-						<!-- application input (TEMPORARILY REMOVED) -->
-						<!-- <label for="application-input-{{ pyramid._id }}">Scenario in which the term is evident:</label>
-						<input type="text" id="application-input-{{ pyramid._id }}"
-						class="form-control input-lg"
-						placeholder="application"
-						value="pyramid.application"> -->
-
-						<!-- fn input -->
-						<label for="fn-input-{{ pyramid._id }}">Function:</label>
-						<textarea rows="4" id="fn-input-{{ pyramid._id }}"
-						class="form-control input-lg"
-						placeholder="Function"
-						ng-model="formData.fn"
-						value="pyramid.fn"></textarea>
-
-						<!-- cause input -->
-						<label for="cause-input-{{ pyramid._id }}">Cause:</label>
-						<textarea rows="4" id="cause-input-{{ pyramid._id }}"
-						class="form-control input-lg"
-						placeholder="Cause"
-						ng-model="formData.cause"
-						value="pyramid.cause"></textarea>
-
-						<!-- impact input -->
-						<label for="impact-input-{{ pyramid._id }}">Impact:</label>
-						<textarea rows="4" id="impact-input-{{ pyramid._id }}"
-						class="form-control input-lg"
-						placeholder="Impact"
-						ng-model="formData.impact"
-						value="pyramid.impact"></textarea>
-					</div>
-
-					<!-- submit button -->
-					<!--REMOVED: data-toggle="collapse" data-target="#pyr-form-{{ pyramid._id }}" -->
-					<input
-					type="submit"
-					class="btn btn-primary btn-lg"
-					value="Submit Changes"
-
-					ng-click="execUpdate(pyramid)">
-					<!-- cancel button -->
-					<button
-					class="btn btn-warning btn-lg"
-					data-toggle="collapse" data-target="#pyr-form-{{ pyramid._id }}"
-					ng-click="resetForm(pyramid)">Cancel</button>
-					<!-- delete button -->
-					<button
-					class="btn btn-danger btn-lg"
-					ng-click="deletePyramid(pyramid._id)">Delete Pyramid</button>
-				</form>
-
-
-			</div>
-		</div>
-	</div>
+	<table id="pyramid-list" class="table table-striped">
+		<thead>
+			<tr>
+				<th>Term</th>
+				<th>Chapter</th>
+				<th>Author</th>
+				<th colspan="2">Actions</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr ng-repeat="pyramid in pyramids">
+				<td>{{ pyramid.name }}</td>
+				<td>{{ pyramid.chapter }}</td>
+				<td>{{ pyramid.author }}</td>
+				<td><span class="text-primary glyphicon glyphicon-pencil"></span></td>
+				<td><span class="text-danger glyphicon glyphicon-trash"></span></td>
+			</tr>
+		</tbody>
+	</table>
 </div>
