updated home content

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -4,6 +4,6 @@
 </div>
 <div>
 	<p class="blurb">
-		This is a study tool/game for psychology students at William Fremd High School. Students can post psychology terms with several points of information about each term. Then, there's gonna be a game but that's not done yet so I don't know why I'm mentioning it.... Stand by.
+		This is a study tool/game for psychology students at William Fremd High School. Students can post psychology terms with several points of information about each term. Then, there's gonna be a game but that's not done yet so I don't know why I'm mentioning it... Stand by.
 	</p>
 </div>
