--- a/public/views/editor.html
+++ b/public/views/editor.html
@@ -3,28 +3,28 @@
 		<h1>Pyramid Editor</h1>
 	</div>
 
-	<!-- PYRAMID input FORM -->
+	<!-- PYRAMID input required maxlength="100" FORM -->
 	<div id="pyramid-form" class="row">
-		<div class="col-sm-8 col-sm text-center">
+		<div class="col-md-12 text-center">
 			<form action="" id="pyr-form">
 				<div class="form-group">
 					<!-- author input -->
 					<label for="author-input">Your name:</label>
-					<input type="text" id="author-input"
+					<input required maxlength="100" type="text" id="author-input"
 					class="form-control input-lg"
 					placeholder="Author"
 					ng-model="formData.author">
 
 					<!-- name input -->
 					<label for="name-input">Name of term:</label>
-					<input type="text" id="name-input"
+					<input required maxlength="100" type="text" id="name-input"
 					class="form-control input-lg"
 					placeholder="Name"
 					ng-model="formData.name">
 
 					<!-- chapter input -->
 					<label for="chapter-input">Term's chapter or unit:</label>
-					<select id="chapter-input"
+					<select required id="chapter-input"
 					class="form-control input-lg"
 					ng-model="formData.chapter">
 						<option ng-repeat="chapter in chapters">{{ chapter }}</option>
@@ -32,49 +32,49 @@
 
 					<!-- context input -->
 					<label for="context-input">Term's category, theory, or group:</label>
-					<input type="text" id="context-input"
+					<input required maxlength="100" type="text" id="context-input"
 					class="form-control input-lg"
 					placeholder="Context"
 					ng-model="formData.context">
 
 					<!-- contrast input -->
 					<label for="contrast-input">Something the term could be confused with:</label>
-					<input type="text" id="contrast-input"
+					<input required maxlength="100" type="text" id="contrast-input"
 					class="form-control input-lg"
 					placeholder="Contrast"
 					ng-model="formData.contrast">
 
 					<!-- example input -->
 					<label for="example-input">Scenario in which the term is evident:</label>
-					<textarea rows="4" id="example-input"
+					<textarea required maxlength="300" rows="4" id="example-input"
 					class="form-control input-lg"
 					placeholder="Example"
 					ng-model="formData.example"></textarea>
 
 					<!-- application input (TEMPORARILY REMOVED) -->
 					<!-- <label for="application-input">Scenario in which the term is evident:</label>
-					<input type="text" id="application-input"
+					<input required maxlength="100" type="text" id="application-input"
 					class="form-control input-lg"
 					placeholder="application"
 					ng-model="formData.application"> -->
 
 					<!-- fn input -->
 					<label for="fn-input">What the term does, or what happens in presence of the term:</label>
-					<textarea rows="4" id="fn-input"
+					<textarea required maxlength="300" rows="4" id="fn-input"
 					class="form-control input-lg"
 					placeholder="Function"
 					ng-model="formData.fn"></textarea>
 
 					<!-- cause input -->
 					<label for="cause-input">Why the term exists:</label>
-					<textarea rows="4" id="cause-input"
+					<textarea required maxlength="300" rows="4" id="cause-input"
 					class="form-control input-lg"
 					placeholder="Cause"
 					ng-model="formData.cause"></textarea>
 
 					<!-- impact input -->
 					<label for="impact-input">How the term affects real life:</label>
-					<textarea rows="4" id="impact-input"
+					<textarea required maxlength="300" rows="4" id="impact-input"
 					class="form-control input-lg"
 					placeholder="Impact"
 					ng-model="formData.impact"></textarea>
