fixed force submit bug and added delete functionality

--- a/public/views/editor.html
+++ b/public/views/editor.html
@@ -1,4 +1,4 @@
-<div ng-controller="EditorController">
+<div ng-controller="CreateController">
 	<div class="jumbotron text-center">
 		<h1>Pyramid Editor</h1>
 	</div>
