--- a/public/views/pyramids.html
+++ b/public/views/pyramids.html
@@ -1,25 +1,58 @@
 <div ng-controller="PyramidController">
+    <md-card>
+        <md-toolbar class="md-table-toolbar md-default" ng-hide="selected.length">
+            <div class="md-toolbar-tools">
+                <span>{{ pyramids.length }} Pyramids</span>
+                <div flex></div>
+                <md-button class="md-icon-button" ng-click="getPyramids()">
+                    <md-icon>refresh</md-icon>
+                </md-button>
+            </div>
+        </md-toolbar>
 
-	<!-- header -->
-	<div class="jumbotron text-center"><h1><span class="label label-info">{{ pyramids.length }}</span> Pyramids</h1></div>
-	<!-- list of existing pyramids -->
-	<table id="pyramid-list" class="table table-striped">
-		<thead>
-			<tr>
-				<th>Term</th>
-				<th>Chapter</th>
-				<th>Author</th>
-				<th colspan="2">Actions</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr ng-repeat="pyramid in pyramids">
-				<td>{{ pyramid.name }}</td>
-				<td>{{ pyramid.chapter }}</td>
-				<td>{{ pyramid.author }}</td>
-				<td><span class="text-primary glyphicon glyphicon-pencil"></span></td>
-				<td class="clickable" ng-click="deletePyramid(pyramid._id)"><span class="text-danger glyphicon glyphicon-trash"></span></td>
-			</tr>
-		</tbody>
-	</table>
+        <md-toolbar class="md-table-toolbar alternate" ng-show="selected.length">
+          <div class="md-toolbar-tools">
+            <span>{{selected.length}} {{selected.length > 1 ? 'items' : 'item'}} selected</span>
+          </div>
+        </md-toolbar>
+    	<!-- list of existing pyramids -->
+        <md-table-container>
+        	<table id="pyramid-list" md-table md-row-select multiple ng-model="selected">
+        		<thead md-head md-order="query.order" md-on-reorder="getPyramids">
+        			<tr md-row>
+        				<th md-column>Term</th>
+        				<th md-column>Chapter</th>
+        				<th md-column>Author</th>
+        				<th md-column colspan="3">Actions</th>
+        			</tr>
+        		</thead>
+        		<tbody md-body>
+        			<tr md-row 
+                    md-select="pyramid" 
+                    md-select-id="name" md-auto-select
+                    ng-repeat="pyramid in pyramids">
+        				<td md-cell>{{ pyramid.name }}</td>
+        				<td md-cell>{{ pyramid.chapter }}</td>
+        				<td md-cell>{{ pyramid.author }}</td>
+                        
+                        <td md-cell class="clickable">
+                            <md-button class="md-icon-button md-accent">
+                                <md-icon>remove_red_eye</md-icon>
+                            </md-button>
+                        </td>
+                        <td md-cell class="clickable">
+                            <md-button class="md-icon-button md-primary">
+                                <md-icon>edit</md-icon>
+                            </md-button>
+                        </td>
+        				<td md-cell class="clickable">
+                            <md-button class="md-icon-button md-warn" ng-click="deletePyramid(pyramid._id)">
+                                <md-icon>delete</md-icon>
+                            </md-button>
+                        </td>
+        			</tr>
+        		</tbody>
+        	</table>
+        </md-table-container>
+    </md-card>
 </div>
