--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,7 +1,15 @@
-<h1>Psych Pyramids</h1>
-<h3>(preliminary name)</h3>
+<h1>Psych Pyramids (preliminary name)</h1>
 <div>
-	<p>
-		This is a study tool/game for psychology students at William Fremd High School. Students can post psychology terms with several points of information about each term. Then, there's gonna be a game but that's not done yet so I don't know why I'm mentioning it... Stand by.
-	</p>
+	<h3>TODO LIST</h3>
+	<ul>
+		<li>design view dialog</li>
+		<li>implement view dialog</li>
+		<li>design edit dialog</li>
+		<li>implement edit dialog</li>
+		<li>create mass delete button in table -- <i>OR</i> -- remove select functionality</li>
+		<li>create filter by unit</li>
+		<li>OPTIONAL: implement column sorting</li>
+		<br>
+		<li>implement game</li>
+	</ul>
 </div>
