grouped action columns together and improved css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,3 +31,9 @@ input, textarea, select {
 main {
 	overflow-y: hidden;
 }
+.action-column {
+	padding: 0px !important;
+}
+.text-center {
+	text-align: center;
+}
