--- a/public/views/editor.html
+++ b/public/views/editor.html
@@ -1,6 +1,6 @@
 <div ng-controller="CreateController">
 	<!-- PYRAMID input required maxlength="100" FORM -->
-	<div style="text-align: center">
+	<div class="text-center">
 		<h2>Create Pyramid</h2>
 
 		<form id="pyr-form">
@@ -128,7 +128,7 @@
 	        	</div>
 			</md-input-container>
 			
-			<div style="text-align: center;">
+			<div class="text-center">
 				<md-button 
 				type="submit"
 				class="md-primary md-raised"
