--- a/public/views/pyramids.html
+++ b/public/views/pyramids.html
@@ -24,7 +24,7 @@
         				<th md-column>Chapter</th>
                         <th md-column>Context</th>
         				<th md-column>Author</th>
-        				<th md-column colspan="3">Actions</th>
+        				<th md-column colspan="3" class="text-center">Actions</th>
         			</tr>
         		</thead>
         		<tbody md-body>
@@ -37,17 +37,17 @@
         				<td md-cell>{{ pyramid.context }}</td>
         				<td md-cell>{{ pyramid.author }}</td>
                         
-                        <td md-cell class="clickable">
+                        <td md-cell class="action-column">
                             <md-button class="md-icon-button md-accent">
                                 <md-icon>remove_red_eye</md-icon>
                             </md-button>
                         </td>
-                        <td md-cell class="clickable">
+                        <td md-cell class="action-column">
                             <md-button class="md-icon-button md-primary">
                                 <md-icon>edit</md-icon>
                             </md-button>
                         </td>
-        				<td md-cell class="clickable">
+        				<td md-cell class="action-column">
                             <md-button class="md-icon-button md-warn" ng-click="deletePyramid(pyramid._id)">
                                 <md-icon>delete</md-icon>
                             </md-button>
