--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,3 +37,12 @@ main {
 .text-center {
 	text-align: center;
 }
+th, td {
+  -webkit-touch-callout: none;
+    -webkit-user-select: none;
+     -khtml-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+	cursor: default;
+}
