--- a/public/views/pyramids.html
+++ b/public/views/pyramids.html
@@ -30,7 +30,7 @@
         		<tbody md-body>
         			<tr md-row 
                     md-select="pyramid" 
-                    md-select-id="name" md-auto-select
+                    md-select-id="name"
                     ng-repeat="pyramid in pyramids">
         				<td md-cell>{{ pyramid.name }}</td>
                         <td md-cell>{{ pyramid.chapter }}</td>
@@ -38,17 +38,17 @@
         				<td md-cell>{{ pyramid.author }}</td>
                         
                         <td md-cell class="action-column">
-                            <md-button class="md-icon-button md-accent">
+                            <md-button class="md-icon-button md-primary md-raised">
                                 <md-icon>remove_red_eye</md-icon>
                             </md-button>
                         </td>
                         <td md-cell class="action-column">
-                            <md-button class="md-icon-button md-primary">
+                            <md-button class="md-icon-button md-accent md-raised">
                                 <md-icon>edit</md-icon>
                             </md-button>
                         </td>
         				<td md-cell class="action-column">
-                            <md-button class="md-icon-button md-warn" ng-click="deletePyramid(pyramid._id)">
+                            <md-button class="md-icon-button md-warn md-raised" ng-click="deletePyramid(pyramid._id)">
                                 <md-icon>delete</md-icon>
                             </md-button>
                         </td>
