added function list to home tab

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,5 +1,24 @@
 <h1>Psych Pyramids (preliminary name)</h1>
 <div>
+	<h2>To Anyone Seeing This:</h2>
+	<p>This app is currently in development. Here's what does and doesn't work on the website right now:</p>
+	<div layout="row">
+		<div layout="column">
+			<p>Does Work</p>
+			<ul>
+				<li>Creating items ("CREATE" tab)</li>
+				<li>Deleting items (be careful around those delete buttons)</li>
+			</ul>
+		</div>
+		<div layout="column" class="spacer"></div>
+		<div layout="column">
+			<p>Doesn't Work</p>
+			<ul>
+				<li>Viewing items (eye buttons)</li>
+				<li>Editing items (pencil buttons)</li>
+			</ul>
+		</div>
+	</div>
 	<h3>TODO LIST</h3>
 	<ul>
 		<li>design view dialog</li>
