--- a/public/views/create.html
+++ b/public/views/create.html
@@ -7,7 +7,7 @@
 			<!-- author input -->
 			<md-input-container class="md-block" flex-gt-sm>
 				<label>Your Name</label>
-				<md-icon class="material-icons">&#xE7FD;</md-icon>
+				<md-icon>person</md-icon>
 				<input required maxlength="100" type="text" id="author-input"
 				placeholder="Your name"
 				ng-model="formData.author">
