--- a/public/views/home.html
+++ b/public/views/home.html
@@ -8,21 +8,22 @@
 			<ul>
 				<li>Creating items ("CREATE" tab)</li>
 				<li>Deleting items (be careful around those delete buttons)</li>
+				<li>Viewing items (eye buttons)</li>
 			</ul>
 		</div>
 		<div layout="column" class="spacer"></div>
 		<div layout="column">
 			<p>Doesn't Work</p>
 			<ul>
-				<li>Viewing items (eye buttons)</li>
 				<li>Editing items (pencil buttons)</li>
 			</ul>
 		</div>
 	</div>
 	<h3>TODO LIST</h3>
 	<ul>
-		<li>design view dialog</li>
-		<li>implement view dialog</li>
+		<li><strike>design view dialog</strike></li>
+		<li><strike>implement view dialog</strike></li>
+		<li>refactor "pyramid" to "tower"</li>
 		<li>design edit dialog</li>
 		<li>implement edit dialog</li>
 		<li>create mass delete button in table -- <i>OR</i> -- remove select functionality</li>
