--- a/public/views/home.html
+++ b/public/views/home.html
@@ -23,11 +23,12 @@
 	<ul>
 		<li><strike>design view dialog</strike></li>
 		<li><strike>implement view dialog</strike></li>
-		<li>refactor "pyramid" to "tower"</li>
-		<li>design edit dialog</li>
-		<li>implement edit dialog</li>
+		<li><strike>design edit dialog</strike></li>
+		<li><strike>implement edit dialog</strike></li>
+		<li><strike>show message after creating a pyramid</strike></li>
 		<li>create mass delete button in table -- <i>OR</i> -- remove select functionality</li>
 		<li>create filter by unit</li>
+		<li>refactor "pyramid" to "tower"</li>
 		<li>OPTIONAL: implement column sorting</li>
 		<br>
 		<li>implement game</li>
