--- a/public/views/list.html
+++ b/public/views/list.html
@@ -45,7 +45,9 @@
                             </md-button>
                         </td>
                         <td md-cell class="action-column">
-                            <md-button class="md-icon-button md-accent md-raised">
+                            <md-button 
+                            class="md-icon-button md-accent md-raised"
+                            ng-click="showEdit(pyramid, $event)">
                                 <md-icon>edit</md-icon>
                             </md-button>
                         </td>
