--- a/public/views/home.html
+++ b/public/views/home.html
@@ -9,13 +9,14 @@
 				<li>Creating items ("CREATE" tab)</li>
 				<li>Deleting items (be careful around those delete buttons)</li>
 				<li>Viewing items (eye buttons)</li>
+				<li>Editing items (pencil buttons)</li>
 			</ul>
 		</div>
 		<div layout="column" class="spacer"></div>
 		<div layout="column">
 			<p>Doesn't Work</p>
 			<ul>
-				<li>Editing items (pencil buttons)</li>
+				<li><i>Nothing for now. There are no extraneous features on this site at the moment!</i></li>
 			</ul>
 		</div>
 	</div>
